# vdecapture

./: CMakeLists.txt  README.md  vdecapture.c
man/: vdecapture.1  vdecapture.1.md
